syntax = "proto3";
package api;
option go_package = "./../api";
import "common.proto";
import "file.proto";
enum UserLevelE{
    Unauth = 0;
    Auth = 1;
}
message UserR{
    string id = 1;
    string name = 2;
    string email = 3;
    optional FileR avatar = 4;
    UserLevelE level = 5;
}
message UserItemR{
    string id = 1;
    string name = 2;
    string email = 3;
    optional FileR avatar = 4;
    UserLevelE level = 5;
    repeated FileR files = 6;
}
message UserListR{
    repeated UserItemR items = 1;
    int64 total = 2;
}
message CreateUserI{
    AuthI auth = 1;
    string name = 2;
    string email = 3;
    UserLevelE level = 4;
    string password = 5;
}
message UpdateUserI{
    AuthI auth = 1;
    string id = 2;
    optional string name = 3;
    optional string email = 4;
    optional string avatar_id = 5;
    optional UserLevelE level = 6;
    optional string password = 7;
}
message AuthByEmailI{
    string email = 1;
    string password = 2;
    string locale = 3;
}
service UserS{
    rpc Create(CreateUserI) returns (UserR){}
    rpc Update(UpdateUserI) returns (UserR){}
    rpc Delete(GetByIdI) returns (StatusR){}
    rpc Id(GetByIdI) returns (UserR){}
    rpc Search(SearchI) returns (UserListR){}
    rpc AuthByEmail(AuthByEmailI) returns(AuthI){}
    rpc Me(AuthI) returns (UserR){}
}
